<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_MODULE_INTERFACE_INPUT" Id="{d3226b62-c81a-4265-9a01-3a4bb09b8d2c}">
    <Declaration><![CDATA[TYPE DUT_MODULE_INTERFACE_INPUT :
STRUCT
	///Mode to run (init,auto,manual,..)
	Mode: DUT_MODE;
	///check if the modules is alive
	ConnectionTestInput: BOOL;
	///Modules get their position
	PositionInput: LREAL;
	///Update data= TRUE, No updatedata=FALSE
	Watchbit: BOOL;
	///Emergency stop
	EmergencyStop: BOOL;
	///Range of INPUT skills
	SkillInput: ARRAY[0..SkillCnt] OF DUT_SKILL_INPUT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>