<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_PARAMETER" Id="{036b9b26-bf72-420b-8aef-d36288c22fdc}">
    <Declaration><![CDATA[TYPE DUT_PARAMETER :
STRUCT
	///Free to use = TRUE, busy to use =FALSE
	Dummy: BOOL;
	///ID of the parameter
	ID: UINT;
	///Name of the parameter
	Name: STRING(80);
	///Unit of the parameter (mm,L,...)
	Unit: STRING(80);
	///Optional parameter
	Required: BOOL;
	///Default parameter to work
	Default: LREAL;
	///Minimum value of the parameter
	MinValue: LREAL;
	///Maximum value of the parameter
	MaxValue: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>